# maker-hub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  Procfile  README.md  SECURITY.md  alembic.ini  app.json  autoapp.py  docker-compose-dev.yml  docker-compose.yml  gen_salt.py  index.html  makefile  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.cfg  sitemap.xml  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  document-change-request.md  document-change.md  feature_request.md  project-maintenance-request.md
.github/workflows/: build.yml  ci-changelog.yml  codeql-analysis.yml  lint.yaml  publish-docs.yml  release.yml
app/: main 2.py  main.py
app/api/: auth.py  exceptions.py  mail.py  part.py  part_api.py  register.py  user.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: parts.py
app/api/v1/: api.py
app/api/v1/endpoints/: parts.py
app/core/: config.py  jwt.py  logging.py  tasks.py  utils.py
app/core/util/: current_user.py  mail.py  password.py
app/db/: __init__.py  db_config.py  db_session.py  errors.py  session.py  tasks.py
app/db/migrations/: README  alembic_helpers.py  env.py
app/db/migrations/versions/: 9905971ce75e_adds_parts_table.py  df07dde39ce9_create_maker_hub_parts_table.py
app/models/: __all_models 2.py  __all_models.py  core.py  datatable.py  db_session 2.py  db_session.py  location.py  modelbase.py  part 2.py  part.py  project.py  response.py  stock.py  stock_history.py  stock_order.py  user.py
app/schema/: __all_schemas.py  core.py  datatable.py  part.py  response.py
app/services/: core.py  exceptions.py  part_service 2.py  part_service.py  project_service 2.py  project_service.py  storage_service.py
app/static/css/: app.css
app/templates/: 401.html  404.html  500.html
app/templates/home/: about.pt  help.pt  index.pt
app/templates/parts/: _menu.pt  create.pt  partslist.pt
app/templates/preferences/: index 2.pt
app/templates/projects/: _menu.pt  create 2.pt  projectlist 2.pt
app/templates/reports/: _menu.pt  overview.pt
app/templates/shared/: _layout 2.pt  _layout.pt
app/templates/storage/: _menu 2.pt  create 2.pt  storagelist 2.pt
app/viewmodels/home/: index_viewmodel.py
app/viewmodels/parts/: __init__.py  partslist_viewmodel.py
app/viewmodels/projects/: projectslist_viewmodel.py
app/viewmodels/reports/: overview_viewmodel.py
app/viewmodels/shared/: viewmodel.py
app/viewmodels/storage/: storagelist_viewmodel.py
app/views/: home 2.py  home.py  parts.py  projects 2.py  projects.py  reports 2.py  reports.py  storage 2.py  storage.py
assets/js/: main.js
authors/: index.html
changelog/: index.html
design/: schema.json
dev/contributing/: index.html
dev/docker/: index.html
dev/documentation/: index.html
dev/getting_started/: index.html
dev/makefile/: index.html
dev/python/: index.html
docs/: authors.md  changelog.md  helpwanted.md  index 2.md  license 2.md
docs/dev/: contributing.md  docker.md  documentation 2.md  documentation.md  env.md  getting_started.md  makefile 2.md  makefile.md  python 2.md  python.md
docs/dev/python/: database.md  python.md
helpwanted/: index.html
license/: index.html
maker_hub/: app.py  commands.py  database.py  extensions.py  settings.py  utils.py
maker_hub/public/: forms.py  views.py
maker_hub/templates/: footer.html  layout.html  nav.html
maker_hub/templates/public/: home.html
maker_hub/user/: forms.py  models.py  views.py
search/: search_index.json
shell_scripts/: supervisord_entrypoint.sh
supervisord_programs/: gunicorn.conf
tests/: common.py  conftest.py  data.py  factories.py  test_forms.py  test_functional.py  test_models.py  test_services.py  util.py
tests/routes/: test_auth.py  test_user.py
tests/test_schemas/: test_factory.py  test_partfactory.py
tests/test_services/: test_part_service.py  test_services.py
