[tool.poetry]
name = "maker-hub"
version = "0.1.0"
description = "Makers Hub for Inventory and Projects"
authors = ["Stephen Eaton <seaton@strobotics.com.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
pydantic = { version = "^1.9", extras = ["email"] }
uvicorn = "^0.18.2"
python-multipart = "^0.0.5"
progressbar2 = "^4.0.0"
passlib = { version = "^1.7", extras = ["bcrypt"] }
python-dateutil = "^2.8.2"
fastapi-chameleon = {git = "https://github.com/mikeckennedy/fastapi-chameleon", rev = "main"}
python-slugify = "^5.0"
Unidecode = "^1.3"
loguru = "^0.6.0"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
uvloop = "^0.16.0"
httptools = "^0.3.0"
beanie = "^1.11.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0"
pytest-asyncio = "^0.17.2"
pytest-env = "^0.6.2"
black = "^22.6"
docker = "^5.0.3"
mypy = "^0.931"
mkdocs-material = "^8.3.9"
mkdocs-macros-plugin = "^0.6.3"
mkdocs-mermaid2-plugin = "^0.5.2"
codespell = "^2.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
'''
env = ["SECRET_KEY=secret"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
