[tool.poetry]
name = "maker-hub"
version = "2022.8.0"
description = "Makers Hub for Inventory and Projects"
authors = ["Stephen Eaton <seaton@strobotics.com.au>"]
license = "MIT"
packages = [
  { include = "app"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
pydantic = { version = "^1.10", extras = ["email"] }
uvicorn = "^0.18.2"
python-multipart = "^0.0.5"
progressbar2 = "^4.0.0"
passlib = { version = "^1.7", extras = ["bcrypt"] }
python-dateutil = "^2.8.2"
fastapi-chameleon = {git = "https://github.com/mikeckennedy/fastapi-chameleon", rev = "main"}
python-slugify = "^6.1"
Unidecode = "^1.3"
loguru = "^0.6.0"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
uvloop = "^0.16.0"
httptools = "^0.4.0"
beanie = "^1.11.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0"
pytest-asyncio = "^0.20.3"
pytest-env = "^0.8.1"
black = "^23.1"
docker = "^6.0.1"
mypy = "^1.3"
mkdocs-material = "^9.0.2"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-mermaid2-plugin = "^0.1.1"
codespell = "^2.2.2"
flake8 = "^5.0.4"
isort = "^5.10.1"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
